# TDAA-go

./: .gitignore  AGENTS.md  CITATION.bib  CLAUDE.md  Makefile  README.md  config.toml.example  config.typ  pyproject.toml
.agents/skills/bootstrap/: SKILL.md
.agents/skills/generate-week/: SKILL.md
.agents/skills/grade-homework/: SKILL.md
.agents/skills/homework-report/: SKILL.md
.agents/skills/learn/: SKILL.md
.agents/skills/pivot/: SKILL.md
.agents/skills/review-learning-sheet/: SKILL.md
.agents/skills/review-tests/: SKILL.md
.agents/skills/revise/: SKILL.md
.agents/skills/setup-zulip-grading/: SKILL.md
.agents/skills/write-learning-sheet/: SKILL.md
.agents/skills/write-tests/: SKILL.md
.agents/skills/zulip-mark-feedback/: SKILL.md
.claude/skills/bootstrap/: SKILL.md
.claude/skills/grade-homework/: SKILL.md
.claude/skills/setup-zulip-grading/: SKILL.md
.claude/skills/write-learning-sheet/: SKILL.md
.claude/skills/zulip-mark-feedback/: SKILL.md
.github/templates/: about.html  index.html  instructor-guide.html  student-guide.html  styles.css
.github/workflows/: release-materials.yml
benchmark/: __init__.py
benchmark/physics/: __init__.py  baseline.py  cli.py  codex_import.py  deepseek_runs.py  evaluation.py  gold.py  manifest.py  metrics.py  packets.py  privacy.py  providers.py  report.py  runner.py  schema.py  validation.py
benchmark/physics/prompts/: review.txt  (+3 more)
docs/reports/: physics-grading-pairwise-findings.md
templates/: advanced-learning-sheet.typ  learning-sheet.typ
templates/week-template/: N.learning-sheet.typ
(+29 files in other folders)
